# voice-assistant

./: .env.example  .gitignore  README.md  agent.py  app.py  index.html  pyproject.toml  requirements.txt
